FINAL/Cluster TFS/controller/manifests/bgpls_speakerservice.yaml
# Copyright 2022-2024 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bgpls-speakerservice
spec:
  selector:
    matchLabels:
      app: bgpls-speakerservice
  replicas: 1
  template:
    metadata:
      labels:
        app: bgpls-speakerservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: localhost:32000/tfs/bgpls_speaker:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 20030
            - containerPort: 9192
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:20030"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:20030"]
          resources:
            requests:
              cpu: 250m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: bgpls-speakerservice
  labels:
    app: bgpls-speakerservice
spec:
  type: ClusterIP
  selector:
    app: bgpls-speakerservice
  ports:
    - name: grpc
      protocol: TCP
      port: 20030
      targetPort: 20030
    - name: metrics
      protocol: TCP
      port: 9192
      targetPort: 9192
