FINAL/Cluster TFS/controller/manifests/cachingservice.yaml
# Copyright 2022-2024 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cachingservice
spec:
  selector:
    matchLabels:
      app: cachingservice
  template:
    metadata:
      labels:
        app: cachingservice
    spec:
      containers:
        - name: redis
          image: redis:7.0-alpine
          ports:
            - containerPort: 6379
              name: client
          command: ["redis-server"]
          args:
            - --requirepass
            - $(REDIS_PASSWORD)
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: cachingservice
spec:
  type: ClusterIP
  selector:
    app: cachingservice
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
