FINAL/Cluster TFS/controller/manifests/interdomainservice.yaml
# Copyright 2022-2024 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: interdomainservice
spec:
  selector:
    matchLabels:
      app: interdomainservice
  template:
    metadata:
      labels:
        app: interdomainservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: labs.etsi.org:5050/tfs/controller/interdomain:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 10010
            - containerPort: 9192
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:10010"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:10010"]
          resources:
            requests:
              cpu: 250m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: interdomainservice
  labels:
    app: interdomainservice
spec:
  type: ClusterIP
  selector:
    app: interdomainservice
  ports:
    - name: grpc
      protocol: TCP
      port: 10010
      targetPort: 10010
    - name: metrics
      protocol: TCP
      port: 9192
      targetPort: 9192
