FINAL/Cluster TFS/controller/manifests/webuiservice.yaml
# Copyright 2022-2024 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webuiservice
spec:
  selector:
    matchLabels:
      app: webuiservice
  replicas: 1
  template:
    metadata:
      labels:
        app: webuiservice
    spec:
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: server
          image: labs.etsi.org:5050/tfs/controller/webui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8004
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8004
            initialDelaySeconds: 5
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: 8004
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
        - name: grafana
          image: grafana/grafana:8.5.22
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          readinessProbe:
            failureThreshold: 60
            httpGet:
              #path: /robots.txt
              path: /login
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 60
            initialDelaySeconds: 1
            periodSeconds: 1
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: webuiservice
  labels:
    app: webuiservice
spec:
  type: ClusterIP
  selector:
    app: webuiservice
  ports:
    - name: webui
      port: 8004
      targetPort: 8004
    - name: grafana
      port: 3000
      targetPort: 3000
